force-app/main/default/objects/Opportunity/fields/Annual_Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Gross_Salary__c</fullName>
    <label>Annual Gross Salary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary - Lowest</fullName>
            </value>
            <value>
                <fullName>Salary - Highest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>