force-app/main/default/objects/Opportunity/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <label>Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married filing jointly</fullName>
            </value>
            <value>
                <fullName>Married filing separately</fullName>
            </value>
            <value>
                <fullName>Head of household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>