force-app/main/default/objects/Opportunity/fields/Job_Board_Site__c.field-meta.xml
<CustomField>
    <fullName>Job_Board_Site__c</fullName>
    <description>Source Job Board Website</description>
    <label>Job Board Site</label>
    <type>Url</type>
</CustomField>