force-app/main/default/objects/Opportunity/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>