force-app/main/default/objects/Opportunity/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <inlineHelpText>Enter City and State</inlineHelpText>
    <label>Job Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>