force-app/main/default/objects/Opportunity/fields/Job_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Date__c</fullName>
    <inlineHelpText>Date the Job was posted on Jooble</inlineHelpText>
    <label>Job Posting Date</label>
    <type>Date</type>
</CustomField>