force-app/main/default/objects/Opportunity/fields/Job_Work_Environment__c.field-meta.xml
<CustomField>
    <fullName>Job_Work_Environment__c</fullName>
    <label>Job Work Environment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
                <default>true</default>
                <label>On-Site</label>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>