force-app/main/default/objects/Opportunity/fields/Jooble_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Jooble_External_Id__c</fullName>
    <description>External Id for Jooble Job Site</description>
    <externalId>true</externalId>
    <label>Jooble External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>