force-app/main/default/objects/Opportunity/fields/Jooble_Salary__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Salary__c</fullName>
    <description>Salary retrieved from Jooble</description>
    <label>Jooble Salary</label>
    <type>TextArea</type>
</CustomField>