force-app/main/default/objects/Opportunity/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <label>Medicare</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>