force-app/main/default/objects/Opportunity/fields/Salary_Lowest__c.field-meta.xml
<CustomField>
    <fullName>Salary_Lowest__c</fullName>
    <description>Captures the expected lowest salary for the job position</description>
    <inlineHelpText>Captures the expected lowest salary for the job position</inlineHelpText>
    <label>Salary - Lowest</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>