force-app/main/default/objects/Opportunity/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <label>Social Security</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>