force-app/main/default/objects/Opportunity/fields/Spouse_s_Salary__c.field-meta.xml
<CustomField>
    <fullName>Spouse_s_Salary__c</fullName>
    <label>Spouse&apos;s Salary</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>