force-app/main/default/objects/Opportunity/fields/Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Pay__c</fullName>
    <label>Take Home Pay</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>