force-app/main/default/objects/Opportunity/validationRules/Min_Salary_must_be_Less_than_Max_Salary.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Salary_must_be_Less_than_Max_Salary</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Salary_Lowest__c )),
  NOT(ISBLANK(Salary_Highest__c)), 
  Salary_Lowest__c &gt; Salary_Highest__c
)</errorConditionFormula>
    <errorDisplayField>Salary_Lowest__c</errorDisplayField>
    <errorMessage>Salary - Lowest must be less than Salary - Highest</errorMessage>
</ValidationRule>